# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_v2.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstadd_back_bonus.c  ft_lstadd_bonus.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstclear_bonus.c  ft_lstdelone.c  ft_lstdelone_bonus.c  ft_lstiter.c  ft_lstiter_bonus.c  ft_lstlast.c  ft_lstlast_bonus.c  ft_lstmap.c  ft_lstmap_bonus.c  ft_lstnew.c  ft_lstnew_bonus.c  ft_lstsize.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  (+23 more)
functions/: ft_atoi.c  ft_isprint.c  ft_memmove.c  ft_strlen.c
source files/: ft_isalpha.c
sourcefiles/: ft_strlcat.c  ft_strnstr.c  ft_toupper.c
src/: ft_atoi.c  ft_itoa.c  ft_split.c  ft_strnstr.c
tests/: CMakeLists.txt  Makefile  ftlibtests.cc  testutils.c  unittests.c  unittests_libft.c
tests/src/: test_atoi.c  test_bzero.c  test_isalnum.c  test_isalpha.c  test_isdigit.c  test_isprint.c  test_memchr.c  test_strtrim.c  test_substr.c  testutils.c  unittests_libft.c  unittests_libft.h
